fix: implemented token versioning on signout
